all fake created

--- a/ba.html
+++ b/ba.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>British Airways</title>
+	<title>UK Airlines</title>
 
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-	<div class="jumbotron">
+    <div class="jumbotron">
 		<div class="header ">
-			<a href="index.html"><span class="header-pt-1">Vayu</span><span class="header-pt-2">Review</span></a>
+			<a href="index.html"><span class="header-pt-1">Companion</span><span class="header-pt-2">Website</span></a>
 		</div>
 
 		<div class="login">
@@ -27,18 +27,15 @@
 		<table border='0'>
 			<tr>
 				<td style="width:40vw;">
-					<img src="imgs/ba_100.png">
+					<img src="imgs/uk_airlines.png">
 					<br>
 					<br>
 					<div>
-						<h3>BRITISH AIRWAYS</h3>
+						<h3>UK Airlines</h3>
 						<span style="font-size:1.5em; color:rgba(0,0,0,0.6)">Customer Reviews</span>
 					</div>
 				</td>
 
-				<td>
-					<img src="imgs/emirates-badge.png" style="max-width: 100px">
-				</td>
 			</tr>
 
 			<tr>
@@ -138,7 +135,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
 					<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 					<br>
 					<div>
@@ -209,7 +206,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -280,7 +277,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -357,7 +354,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -421,7 +418,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -501,7 +498,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -581,7 +578,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -661,7 +658,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -741,7 +738,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -821,7 +818,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -898,7 +895,7 @@
 	</div>
 
 	<div class="jumbotron-footer">
-		<div>Copyright @ VayuReview</div>
+		<div>Companion Website (For research purposes)</div>
 	</div>
 
 </body>
