--- a/cpa.html
+++ b/cpa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Cathay Pacific Airways</title>
+	<title>Cool Airways</title>
 
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,33 +11,30 @@
         <link rel="stylesheet" type="text/css" href="css/styles-description.css">
 </head>
 <body>
-
-	<div class="jumbotron">
+    <div class="jumbotron">
 		<div class="header ">
-			<a href="index.html"><span class="header-pt-1">Vayu</span><span class="header-pt-2">Review</span></a>
+			<a href="index.html"><span class="header-pt-1">Companion</span><span class="header-pt-2">Website</span></a>
 		</div>
 
 		<div class="login">
 			<a href="#" style="color: #fff";>Login/Sign Up</a>
 		</div>
 	</div>
-
 	<div class="container">
 
 		<table border='0'>
 			<tr>
 				<td style="width:40vw;">
-					<img src="imgs/cpa.png">
+					<img src="imgs/cool_air.png">
 					<br>
 					<br>
 					<div>
-						<h3>Cathay Pacific Airways</h3>
+						<h3>Cool Airways</h3>
 						<span style="font-size:1.5em; color:rgba(0,0,0,0.6)">Customer Reviews</span>
 					</div>
 				</td>
 
 				<td>
-					<img src="imgs/5-star.png" style="max-width: 100px">
 				</td>
 			</tr>
 
@@ -138,7 +135,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                        <h4 class='review_title'> "robbed in business class?" </h4>
+                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
 					<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 					<br>
 					<div>
@@ -198,7 +195,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -269,7 +266,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -339,7 +336,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -410,7 +407,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -480,7 +477,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -551,7 +548,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -631,7 +628,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -711,7 +708,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -791,7 +788,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "robbed in business class?" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -845,7 +842,7 @@
 	</div>
 
 	<div class="jumbotron-footer">
-		<div>Copyright @ VayuReview</div>
+		<div>Companion Website (For research purposes)</div>
 	</div>
 </body>
 <!-- <script type="text/javascript" src="js/app.js"></script> -->
