--- a/emirates.html
+++ b/emirates.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Emirates</title>
+	<title>W Air</title>
 
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,30 +12,29 @@
 </head>
 <body>
 
-	<div class="jumbotron">
+    <div class="jumbotron">
 		<div class="header ">
-			<a href="index.html"><span class="header-pt-1">Vayu</span><span class="header-pt-2">Review</span></a>
+			<a href="index.html"><span class="header-pt-1">Companion</span><span class="header-pt-2">Website</span></a>
 		</div>
 
 		<div class="login">
 			<a href="#" style="color: #fff";>Login/Sign Up</a>
 		</div>
 	</div>
-
+	
 	<div class="container">
 
 		<table border='0'>
 			<tr>
 				<td style="width:40vw;">
-					<img src="imgs/EMIRATES_197.png">
+					<img src="imgs/wair.png" width="250px">
 					<div>
-						<h3>EMIRATES</h3>
+						<h3>W AIR</h3>
 						<span style="font-size:1.5em; color:rgba(0,0,0,0.6)">Customer Reviews</span>
 					</div>
 				</td>
 
 				<td>
-					<img src="imgs/emirates-badge.png" style="max-width: 100px">
 				</td>
 			</tr>
 
@@ -135,7 +134,7 @@
 
 				<td class="airline-desc">
 					<br>
-					<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+					<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 					<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 					<br>
 					<div>
@@ -204,7 +203,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -274,7 +273,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -353,7 +352,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -424,7 +423,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -505,7 +504,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -585,7 +584,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -664,7 +663,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -744,7 +743,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -823,7 +822,7 @@
 				<td class="airline-desc">
 									<br>
 
-									<h4 class='review_title'> "did not get sleep at all in the flight" </h4>
+									<h4 class='review_title'> "this is a dummy title for airline review" </h4>
 									<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 									<br>
 									<div>
@@ -901,7 +900,7 @@
 	</div>
 
 	<div class="jumbotron-footer">
-		<div>Copyright @ YayuReview</div>
+		<div>Companion Website (For research purposes)</div>
 	</div>
 </body>
 <!--<script type="text/javascript" src="js/app.js"></script>-->
