--- a/at.html
+++ b/at.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Air-Transat</title>
+	<title>Bogey Airlines</title>
 
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-	<div class="jumbotron">
+    <div class="jumbotron">
 		<div class="header ">
-			<a href="index.html"><span class="header-pt-1">Vayu</span><span class="header-pt-2">Review</span></a>
+			<a href="index.html"><span class="header-pt-1">Companion</span><span class="header-pt-2">Website</span></a>
 		</div>
 
 		<div class="login">
@@ -27,17 +27,16 @@
 		<table border='0'>
 			<tr>
 				<td style="width:40vw;">
-					<img src="imgs/at.png">
+					<img src="imgs/bogoy.png">
 					<br>
 					<br>
 					<div>
-						<h3>Air Transat</h3>
+						<h3>Bogey Airlines</h3>
 						<span style="font-size:1.5em; color:rgba(0,0,0,0.6)">Customer Reviews</span>
 					</div>
 				</td>
 
 				<td>
-					<img src="imgs/delta-badge.png" style="max-width: 100px">
 				</td>
 			</tr>
 
@@ -124,7 +123,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -194,7 +193,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -264,7 +263,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -334,7 +333,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -414,7 +413,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -480,7 +479,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -549,7 +548,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -618,7 +617,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -698,7 +697,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -767,7 +766,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "staff were helpful and friendly" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -845,7 +844,7 @@
 	</div>
 
 	<div class="jumbotron-footer">
-		<div>Copyright @ YayuReview</div>
+		<div>Companion Website (For research purposes)</div>
 	</div>
 </body>
 <!-- <script type="text/javascript" src="js/app.js"></script> -->
