--- a/delta.html
+++ b/delta.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Delta Airlines</title>
+	<title>Chi 2 Airlines</title>
 
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-	<div class="jumbotron">
+    <div class="jumbotron">
 		<div class="header ">
-			<a href="index.html"><span class="header-pt-1">Vayu</span><span class="header-pt-2">Review</span></a>
+			<a href="index.html"><span class="header-pt-1">Companion</span><span class="header-pt-2">Website</span></a>
 		</div>
 
 		<div class="login">
@@ -27,15 +27,14 @@
 		<table border='0'>
 			<tr>
 				<td style="width:40vw;">
-					<img src="imgs/DELTA_218.png">
+					<img src="imgs/chi_logo.png">
 					<div>
-						<h3>DELTA AIRLINES</h3>
+						<h3>CHI 2 AIRLINES</h3>
 						<span style="font-size:1.5em; color:rgba(0,0,0,0.6)">Customer Reviews</span>
 					</div>
 				</td>
 
 				<td>
-					<img src="imgs/delta-badge.png" style="max-width: 100px">
 				</td>
 			</tr>
 
@@ -137,7 +136,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
 					<span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
 					<br>
 					<div>
@@ -226,7 +225,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -297,7 +296,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -377,7 +376,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -457,7 +456,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -537,7 +536,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -608,7 +607,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -688,7 +687,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -768,7 +767,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -848,7 +847,7 @@
                     <td class="airline-desc">
                                         <br>
 
-                                        <h4 class='review_title'> "they had taken out 28 bottles" </h4>
+                                        <h4 class='review_title'> "this is a dummy title for airline review" </h4>
                                         <span class='user_info'>Alex Alex (United States) 22nd July 2019</span>
                                         <br>
                                         <div>
@@ -926,7 +925,7 @@
 	</div>
 
 	<div class="jumbotron-footer">
-		<div>Copyright @ YayuReview</div>
+		<div>Companion Website (For research purposes)</div>
 	</div>
 </body>
 <!-- <script type="text/javascript" src="js/app.js"></script> -->
