--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Airlines Reviews and Ratings</title>
-
+	<title>Companion Website: Mock Airlines Reviews and Ratings</title>
 	    <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -14,7 +13,7 @@
 <body>
 	<div class="jumbotron">
 		<div class="header ">
-			<a href="#"><span class="header-pt-1">Vayu</span><span class="header-pt-2">Review</span></a>
+			<a href="#"><span class="header-pt-1">Companion</span><span class="header-pt-2">Website</span></a>
 		</div>
 
 		<div class="login">
@@ -28,10 +27,10 @@
 		<table border="0">
 
 			<tr>
-				<h4 class='review_title'>Airline Customer Reviews </h4>
+				<h4 class='review_title'>Companion Website: Mock Airline Customer Reviews</h4>
 			</tr>
 			<tr>
-				<span> VERIFIED highlights and reviews where users supplied proof of travel with their ticket, booking or boarding pass.</span>
+				<span>  This is the companion website for Web Scraping for Consumer Research</span>
 			</tr>
 			<hr>
 
@@ -40,7 +39,7 @@
 					<div class="rating-circle">5/10</div>
 				</td>
 				<td class="airline-desc">
-					<h4 class='review_title'> <a href="ba.html">British Airways</a></h4>
+					<h4 class='review_title'> <a href="ba.html">UK Airlines</a></h4>
 					<div>
 						<span class='review_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.... <a href="ba.html">Read more</a></span>
 					</div>
@@ -57,7 +56,7 @@
 				</td>
 				<td class="airline-desc">
 					<br>
-					<h4 class='review_title'> <a href="delta.html">Delta Airlines</a></h4>
+					<h4 class='review_title'> <a href="delta.html">Chi 2 Airlines</a></h4>
 					<div>
 						<span class='review_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem donec massa sapien faucibus et molestie ac feugiat sed... <a href="delta.html">Read more</a></span>
 					</div>
@@ -74,7 +73,7 @@
 				</td>
 				<td class="airline-desc">
 					<br>
-					<h4 class='review_title'> <a href="cpa.html">Cathay Pacific Airways</a></h4>
+					<h4 class='review_title'> <a href="cpa.html">Cool Airways</a></h4>
 					<div>
 						<span class='review_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem donec massa sapien faucibus et molestie ac feugiat sed. <a href="cpa.html">Read more</a></span>
 					</div>
@@ -91,7 +90,7 @@
 				</td>
 				<td class="airline-desc">
 					<br>
-					<h4 class='review_title'> <a href="at.html">Air Transat</a></h4>
+					<h4 class='review_title'> <a href="at.html">Bogey Airlines</a></h4>
 					<div>
 						<span class='review_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem donec massa sapien faucibus et molestie ac feugiat sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem donec massa sapien faucibus et molestie ac feugiat sed. <a href="at.html">Read more</a></span>
 					</div>
@@ -108,7 +107,7 @@
 				</td>
 				<td class="airline-desc">
 					<br>
-					<h4 class='review_title'> <a href="emirates.html">Emirates</a></h4>
+					<h4 class='review_title'> <a href="emirates.html">W AIR</a></h4>
 					<div>
 						<span class='review_text'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem donec massa sapien faucibus et molestie ac feugiat sed... <a href="emirates.html">Read more</a></span>
 					</div>
@@ -126,7 +125,7 @@
 
  
 	<div class="jumbotron-footer">
-		<div>Copyright @ VayuReview</div>
+		<div>Companion Website (For research purposes)</div>
 	</div>
 
 
